--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <header>
     <h1>Outil d'aménagement — contours redimensionnables</h1>
-    <span class="hint">Astuce : Maj+clic pour ajouter un point, Suppr pour enlever le point sélectionné.</span>
+    <span class="hint">Astuce : Maj+clic pour ajouter un point, Suppr+clic pour enlever le point sélectionné.</span>
   </header>
 
   <div class="toolbar">
