refacto - code organization

--- a/index.html
+++ b/index.html
@@ -66,11 +66,21 @@
     <aside>
       <h2>Bibliothèque meubles</h2>
       <div class="list">
-        <button class="pill" data-furniture='{"type":"canape","w":2,"h":0.9}'>Canapé 2&nbsp;m</button>
-        <button class="pill" data-furniture='{"type":"table","w":1.2,"h":0.8}'>Table 120×80</button>
-        <button class="pill" data-furniture='{"type":"lit","w":1.6,"h":2}'>Lit 160×200</button>
-        <button class="pill" data-furniture='{"type":"chaise","w":0.45,"h":0.45}'>Chaise</button>
-        <button class="pill" data-furniture='{"type":"placard","w":2,"h":0.6}'>Placard 2 m</button>
+        <button class="pill" data-furniture='{"type":"canape","w":2,"h":0.9}'>
+          <img src="/icons/bed.svg" alt="Canapé" width="24" height="24" style="vertical-align:middle;"> Canapé 2&nbsp;m
+        </button>
+        <button class="pill" data-furniture='{"type":"table","w":1.2,"h":0.8}'>
+          <img src="/icons/table.svg" alt="Table" width="24" height="24" style="vertical-align:middle;"> Table 120×80
+        </button>
+        <button class="pill" data-furniture='{"type":"lit","w":1.6,"h":2}'>
+          <img src="/icons/bed.svg" alt="Lit" width="24" height="24" style="vertical-align:middle;"> Lit 160×200
+        </button>
+        <button class="pill" data-furniture='{"type":"chaise","w":0.45,"h":0.45}'>
+          <img src="/icons/chair.svg" alt="Chaise" width="24" height="24" style="vertical-align:middle;"> Chaise
+        </button>
+        <button class="pill" data-furniture='{"type":"placard","w":2,"h":0.6}'>
+          <img src="/icons/wardrobe.svg" alt="Placard" width="24" height="24" style="vertical-align:middle;"> Placard 2 m
+        </button>
       </div>
       <hr />
       <h2>Actions</h2>
